Add .idea to .gitignore. Change version to 1.0.3.alpha3

--- a/gridtree/pom.xml
+++ b/gridtree/pom.xml
@@ -5,8 +5,8 @@
 	<groupId>org.vaadin</groupId>
 	<artifactId>gridtree</artifactId>
 	<packaging>jar</packaging>
-	<version>1.0.4.alpha1-SNAPSHOT</version>
-	<name>MyComponent Add-on</name>
+	<version>1.0.3.alpha3</version>
+	<name>GridTree</name>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
