--- a/gridtree-demo/pom.xml
+++ b/gridtree-demo/pom.xml
@@ -5,7 +5,7 @@
 	<groupId>org.vaadin</groupId>
 	<artifactId>gridtree-demo</artifactId>
 	<packaging>war</packaging>
-	<version>1.0-SNAPSHOT</version>
+	<version>1.0.4.alpha1-SNAPSHOT</version>
 	<name>MyComponent Add-on Demo</name>
 
 	<properties>
